# MultithreadingExam

./: .gitignore
variant_11_sidak/: matrix.txt  task.txt
variant_11_sidak/fourth_task/src/: MassServiceSystem.java  Queue.java
variant_11_sidak/src/: CashierTask.java  ClientTask.java  Main.java  MatrixClient.java  MatrixServer.java  MeasurementsThread.java
variant_12_sidak/: task.txt
variant_12_sidak/task_3/src/: CascadeSum.java
variant_12_sidak/task_4/src/: ConditionExample.java
variant_13_sidak/: task.txt
variant_13_sidak/task_3/src/: BoundedQueue.java  Consumer.java  Main.java  Producer.java  Queue.java
variant_14_sidak/: task.txt
variant_15_sidak/: task.txt
variant_17_tykhonov/: mpi.cpp  task.txt
variant_17_tykhonov/src/: ParallelSum.java
variant_19_tykhonov/src/: ParallelSorting.java  ThreadPoolExample.java
variant_1_panchenko/: ticket.txt
variant_1_panchenko/fourth_task/: CMakeUserPresets.json  run_app.py
variant_1_panchenko/third_task/: pom.xml
variant_20_tykhonov/src/: MinValueSearch.java  ThreadInteraction.java
variant_4_panchenko/: text.txt
variant_4_panchenko/fourth_task/: CMakeLists.txt  conanfile.py  run_app.py
variant_4_panchenko/fourth_task/include/exam_mpi/: cli_app.hpp
variant_4_panchenko/fourth_task/src/: cli_app.cpp
variant_5_panchenko/: text.txt
variant_5_panchenko/fourth_task/: conan_install.sh
variant_7_panchenko/: text.txt
variant_7_panchenko/fourth_task/: CMakeLists.txt  run_app.py
variant_8_panchenko/: text.txt
variant_8_panchenko/fourth_task/: main.cpp  run_app.py
(+17 files in other folders)
